tests/errors/NonIntArray.java
class NonIntArray
{
    public static void main(String[] a)
    {
		System.out.println(new Test().exec());
    }
}

class Test
{
	public int exec()
	{
		int[] b;
		
		b = new boolean[5];
		
		return 0;
	}
}
